--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo_picture_service
 
 # Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://postgres:5432/pic_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/pic_db
 spring.datasource.username=postgres
 spring.datasource.password=1234
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
