--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <liquibase.version>4.28.0</liquibase.version>
         <preliquibase.version>1.5.0</preliquibase.version>
+        <minio.version>8.5.10</minio.version>
         <postgresql.version>42.7.3</postgresql.version>
         <xml-format.version>3.3.1</xml-format.version>
         <checkstyle.version>3.3.1</checkstyle.version>
@@ -90,6 +91,12 @@
         <!--            <version>2.2.224</version>-->
         <!--            <scope>runtime</scope>-->
         <!--        </dependency>-->
+
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
 
         <!--        Docker-->
         <!--        <dependency>-->
