--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,12 @@
-version: '3.8'
+version: '3'
+
+volumes:
+  db-data:
+    driver: local
+  minio-data:
+    driver: local
+  pgadmin-data:
+
 services:
 #  client-backend:
 #    picture: "daniilbel/pic-backend:1.0.0"
@@ -13,18 +21,43 @@ services:
 #      - SERVER_PORT=8080
 #      - SPRING_DATABASE_URL=jdbc:postgresql://postgres:5432/pic_db
 
-  postgres:
-    image: "postgres"
-    environment:
-      POSTGRES_DB: "pic_db"
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "1234"
-      PGDATA: "/var/lib/postgresql/data/db-data"
+  app:
+    build:
+      context: .
+    container_name: pic-backend
+    depends_on:
+      - db
+      - minio
+    env_file:
+      - .env
     ports:
-      - "5432"
+      - '8080:8080'
+
+  db:
+    image: "postgres"
+    container_name: "postgres"
+    environment:
+      POSTGRES_USER: "${POSTGRES_USERNAME}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_DB: "${POSTGRES_DATABASE}"
+#      PGDATA: "/var/lib/postgresql/data/db-data"
     volumes:
+      - ./src/main/resources/preliquibase:/docker-entrypoint-initdb.d
       - db-data:/var/lib/postgresql/data
-    restart: unless-stopped
+#    restart: unless-stopped
+
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${MINIO_SECRET_KEY}
+    command: server ~/minio --console-address :9090
+    ports:
+      - '9090:9090'
+      - '9000:9000'
+    volumes:
+      - minio-data:/minio
 
   pgadmin:
     image: "dpage/pgadmin4"
@@ -38,6 +71,3 @@ services:
     volumes:
       - "pgadmin-data:/var/lib/pgadmin"
 
-volumes:
-  db-data:
-  pgadmin-data:
