--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,8 @@
 version: '3'
 
 volumes:
+  cache:
+    driver: local
   db-data:
     driver: local
   minio-data:
@@ -28,6 +30,7 @@ services:
     depends_on:
       - db
       - minio
+      - redis
     env_file:
       - .env
     ports:
@@ -45,6 +48,16 @@ services:
       - ./src/main/resources/preliquibase:/docker-entrypoint-initdb.d
       - db-data:/var/lib/postgresql/data
 #    restart: unless-stopped
+
+  redis:
+    image: redis:7.2-rc-alpine
+    restart: always
+    container_name: redis
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - cache:/data
 
   minio:
     image: minio/minio:latest
