--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <graphql-java-kickstart.version>15.2.0</graphql-java-kickstart.version>
         <graphql-java-extended-scalars.version>22.0</graphql-java-extended-scalars.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
         <liquibase.version>4.28.0</liquibase.version>
         <preliquibase.version>1.5.0</preliquibase.version>
         <minio.version>8.5.10</minio.version>
@@ -69,6 +70,12 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
+        </dependency>
+
         <!--        Data Bases-->
         <dependency>
             <groupId>org.liquibase</groupId>
@@ -85,12 +92,11 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>com.h2database</groupId>-->
-        <!--            <artifactId>h2</artifactId>-->
-        <!--            <version>2.2.224</version>-->
-        <!--            <scope>runtime</scope>-->
-        <!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.minio</groupId>
