--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,8 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       POSTGRES_DB: "${POSTGRES_DATABASE}"
 #      PGDATA: "/var/lib/postgresql/data/db-data"
+    ports:
+      - '5432'
     volumes:
       - ./src/main/resources/preliquibase:/docker-entrypoint-initdb.d
       - db-data:/var/lib/postgresql/data
