--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,12 @@ spring:
     graphiql:
       enabled: true
 
+security:
+  jwt:
+    secret: ${JWT_SECRET}
+    access: 1
+    refresh: 30
+
 minio:
   bucket: ${MINIO_BUCKET}
   url: ${MINIO_URL}
