--- a/.envExample
+++ b/.envExample
@@ -3,6 +3,10 @@ POSTGRES_USERNAME=username
 POSTGRES_PASSWORD=password
 POSTGRES_SCHEMA=schema
 
+MONGODB_USERNAME=username
+MONGODB_PASSWORD=password
+MONGODB_DATABASE=mongo-db
+
 REDIS_HOST=localhost
 REDIS_PASSWORD=password
 
